First experiments with template

--- a/biblio/authorpapersVAK.bib
+++ b/biblio/authorpapersVAK.bib
@@ -1,23 +1,23 @@
-@ARTICLE{vakbib1,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О.},
+@ARTICLE{lockatorVAK,
+  author = {Андрианов П.С. and Мутилин В.С. and Хорошилов А.В.},
   addendum = {(0,28~п.~л.)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2013},
-  volume = {1},
-  number = {5},
-  pages = {100--120},
+  title = {Метод легковесного статического анализа для поиска состояний гонок},
+  journal = {Труды Института системного программирования РАН},
+  year = {2015},
+  volume = {5},
+  number = {27},
+  pages = {87--116},
   language = {russian},
 }
 
-@ARTICLE{vakbib2,
-  author = {Фамилия, И. О. and Фамилия2, И. О. and Фамилия3, И. О. and Фамилия4, И. О.},
+@ARTICLE{lockatorVAK2,
+  author = {Андрианов П.С. and Мутилин В.С. and Хорошилов А.В.},
   addendum = {(0,33~п.~л.~/ 0,28~п.~л.)},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2014},
-  volume = {1},
-  number = {5},
-  pages = {100--120},
+  title = {Конфигурируемый метод поиска состояний гонок в операционных системах с использованием предикатных абстракций},
+  journal = {Труды Института системного программирования РАН},
+  year = {2016},
+  volume = {6},
+  number = {28},
+  pages = {65--86},
   language = {russian},
 }
