--- a/biblio/authorpapers.bib
+++ b/biblio/authorpapers.bib
@@ -1,17 +1,33 @@
-@ARTICLE{bib1,
-  author = {Фамилия, И. О.},
-  title = {Название статьи},
-  journal = {Журнал},
-  year = {2012},
-  volume = {1},
-  pages = {100},
-  language = {russian},
+@inproceedings{lockatorSyrcose,
+  author = {Andrianov P.S. and Mutilin V.S. and Khoroshilov A.V.},
+  title = {An approach to lightweight static data race detection},
+  booktitle = {Proceedings of the Spring/Summer Young Researchers' Colloquium on Software Engineering},
+  pages = {27--33},
+  year = {2014},
+  language = {english},
 }
 
-@CONFERENCE{bib2,
-  author = {Фамилия, И. О.},
-  title = {название тезисов конференции},
-  booktitle = {Название сборника},
-  year = {2012},
-  language = {russian},
+@inproceedings{lockatorTMPA,
+  author = {Andrianov P.S. and Mutilin V.S. and Khoroshilov A.V.},
+  title = {Lightweight Static Analysis for Data Race Detection in Operating System Kernel},
+  booktitle = {Proceedings of the international conference "Tools and Methods of Programs Analysis"},
+  pages = {128--135},
+  year = {2014},
+  language = {english},
+}
+
+@Inbook{TMPA2017,
+  author={Andrianov, Pavel and Mutilin, Vadim and Khoroshilov, Alexey},
+  editor={Itsykson, Vladimir and Scedrov, Andre and Zakharov, Victor},
+  title={Predicate Abstraction Based Configurable Method for Data Race Detection in Linux Kernel},
+  bookTitle={Tools and Methods of Program Analysis: 4th International Conference, TMPA 2017, Moscow, Russia, March 3-4, 2017, Revised   Selected Papers},
+  year={2018},
+  publisher={Springer International Publishing},
+  address={Cham},
+  pages={11--23},
+  abstract={The paper presents a configurable method for static data race detection. The method is based on a lightweight approach that   implements Lockset algorithm with a simplified memory model. The paper contributes two heavyweight extensions which allow to adjust required precision of the analysis by choosing the balance between spent resources and a number of false alarms. The extensions are (1) counterexample guided refinement based on predicate abstraction and (2) thread analysis. The approach was implemented in the CPALockator tool and was applied to Linux kernel modules. Real races found by the tool have been approved and fixed by Linux kernel developers.},
+  isbn={978-3-319-71734-0},
+  doi={10.1007/978-3-319-71734-0_2},
+  url={https://doi.org/10.1007/978-3-319-71734-0_2},
+  language = {english}
 }
