--- a/common/data.tex
+++ b/common/data.tex
@@ -1,7 +1,7 @@
 %%% Основные сведения %%%
-\newcommand{\thesisAuthorLastName}{\todo{Фамилия}}
-\newcommand{\thesisAuthorOtherNames}{\todo{Имя Отчество}}
-\newcommand{\thesisAuthorInitials}{\todo{И.\,О.}}
+\newcommand{\thesisAuthorLastName}{Андрианов}
+\newcommand{\thesisAuthorOtherNames}{Павел Сергеевич}
+\newcommand{\thesisAuthorInitials}{П.\,С.}
 \newcommand{\thesisAuthor}             % Диссертация, ФИО автора
 {%
     \texorpdfstring{% \texorpdfstring takes two arguments and uses the first for (La)TeX and the second for pdf
@@ -15,35 +15,35 @@
 %\newcommand{\thesisUdk}                % Диссертация, УДК
 %{\todo{xxx.xxx}}
 \newcommand{\thesisTitle}              % Диссертация, название
-{\todo{Название диссертационной работы}}
+{Анализ корректности синхронизации компонентов ядра операционных систем}
 \newcommand{\thesisSpecialtyNumber}    % Диссертация, специальность, номер
-{\todo{XX.XX.XX}}
+{05.13.11}
 \newcommand{\thesisSpecialtyTitle}     % Диссертация, специальность, название
-{\todo{Название специальности}}
+{Математическое и программное обеспечение вычислительных машин, комплексов и компьютерных сетей}
 \newcommand{\thesisDegree}             % Диссертация, ученая степень
-{\todo{кандидата физико-математических наук}}
+{кандидата физико-математических наук}
 \newcommand{\thesisDegreeShort}        % Диссертация, ученая степень, краткая запись
-{\todo{канд. физ.-мат. наук}}
+{канд. физ.-мат. наук}
 \newcommand{\thesisCity}               % Диссертация, город написания диссертации
-{\todo{Город}}
+{Москва}
 \newcommand{\thesisYear}               % Диссертация, год написания диссертации
-{\todo{20XX}}
+{2018}
 \newcommand{\thesisOrganization}       % Диссертация, организация
-{\todo{Название учреждения, в~котором выполнялась данная диссертационная работа}}
+{Институт системного программирования Российской академии наук}
 \newcommand{\thesisOrganizationShort}  % Диссертация, краткое название организации для доклада
-{\todo{НазУчДисРаб}}
+{ИСП РАН}
 
 \newcommand{\thesisInOrganization}     % Диссертация, организация в предложном падеже: Работа выполнена в ...
-{\todo{учреждении, в~котором выполнялась данная диссертационная работа}}
+{институт системного программирования Российской академии наук}
 
 \newcommand{\supervisorFio}            % Научный руководитель, ФИО
-{\todo{Фамилия Имя Отчество}}
+{Хорошилов Алексей Владимирович}
 \newcommand{\supervisorRegalia}        % Научный руководитель, регалии
-{\todo{уч. степень, уч. звание}}
+{кандидат физико-математических наук}
 \newcommand{\supervisorFioShort}       % Научный руководитель, ФИО
-{\todo{И.\,О.~Фамилия}}
+{А.~В.~Хорошилов}
 \newcommand{\supervisorRegaliaShort}   % Научный руководитель, регалии
-{\todo{уч.~ст.,~уч.~зв.}}
+{канд.~физ.-мат.~наук}
 
 
 \newcommand{\opponentOneFio}           % Оппонент 1, ФИО
