--- a/dissertation.tex
+++ b/dissertation.tex
@@ -27,17 +27,17 @@
 \input{common/renames}                   % Переопределение именований
 
 % Структура диссертации (ГОСТ Р 7.0.11-2011, 4)
-\include{Dissertation/title}           % Титульный лист
-\include{Dissertation/contents}        % Оглавление
-\include{Dissertation/introduction}    % Введение
-\include{Dissertation/part1}           % Глава 1
-\include{Dissertation/part2}           % Глава 2
-\include{Dissertation/part3}           % Глава 3
-\include{Dissertation/conclusion}      % Заключение
-\include{Dissertation/acronyms}        % Список сокращений и условных обозначений
-\include{Dissertation/dictionary}      % Словарь терминов
-\include{Dissertation/references}      % Список литературы
-\include{Dissertation/lists}           % Списки таблиц и изображений (иллюстративный материал)
-\include{Dissertation/appendix}        % Приложения
+\include{Dissertation/title}               % Титульный лист
+\include{Dissertation/contents}            % Оглавление
+\include{Dissertation/introduction}        % Введение
+\include{Dissertation/part_related_work}   % Обзор
+\include{Dissertation/part_theory}         % Теория
+\include{Dissertation/part_implementation} % Реализация
+\include{Dissertation/conclusion}          % Заключение
+\include{Dissertation/acronyms}            % Список сокращений и условных обозначений
+\include{Dissertation/dictionary}          % Словарь терминов
+\include{Dissertation/references}          % Список литературы
+\include{Dissertation/lists}               % Списки таблиц и изображений (иллюстративный материал)
+\include{Dissertation/appendix}            % Приложения
 
 \end{document}
