More updates of related work

--- a/biblio/othercites.bib
+++ b/biblio/othercites.bib
@@ -1,3 +1,83 @@
+@InProceedings{Kahlon:2009:SRTI,
+author="Kahlon, Vineet
+and Sankaranarayanan, Sriram
+and Gupta, Aarti",
+editor="Kowalewski, Stefan
+and Philippou, Anna",
+title="Semantic Reduction of Thread Interleavings in Concurrent Programs",
+booktitle="Tools and Algorithms for the Construction and Analysis of Systems",
+year="2009",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="124--138",
+isbn="978-3-642-00768-2"
+}
+
+@inproceedings{Atig:2009,
+ author = {Atig, Mohamed Faouzi and Bouajjani, Ahmed and Qadeer, Shaz},
+ title = {Context-Bounded Analysis for Concurrent Programs with Dynamic Creation of Threads},
+ booktitle = {Proceedings of the 15th International Conference on Tools and Algorithms for the Construction and Analysis of Systems: Held As Part of the Joint European Conferences on Theory and Practice of Software, ETAPS 2009,},
+ series = {TACAS '09},
+ year = {2009},
+ isbn = {978-3-642-00767-5},
+ location = {York, UK},
+ pages = {107--123},
+ numpages = {17},
+ url = {http://dx.doi.org/10.1007/978-3-642-00768-2_11},
+ doi = {10.1007/978-3-642-00768-2_11},
+ acmid = {1532906},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+}
+
+@article{KIM200921,
+title = "Model-based Kernel Testing for Concurrency Bugs through Counter Example Replay",
+journal = "Electronic Notes in Theoretical Computer Science",
+volume = "253",
+number = "2",
+pages = "21 - 36",
+year = "2009",
+note = "Proceedings of Fifth Workshop on Model Based Testing (MBT 2009)",
+issn = "1571-0661",
+doi = "https://doi.org/10.1016/j.entcs.2009.09.049",
+url = "http://www.sciencedirect.com/science/article/pii/S1571066109004034",
+author = "Moonzoo Kim and Shin Hong and Changki Hong and Taeho Kim",
+keywords = "Model checking, testing, counter example analysis, model extraction"
+}
+
+@inproceedings{Chatterjee:2007,
+ author = {Chatterjee, Shaunak and Lahiri, Shuvendu K. and Qadeer, Shaz and Rakamaric, Zvonimir},
+ title = {A Reachability Predicate for Analyzing Low-level Software},
+ booktitle = {Proceedings of the 13th International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+ series = {TACAS'07},
+ year = {2007},
+ isbn = {978-3-540-71208-4},
+ location = {Braga, Portugal},
+ pages = {19--33},
+ numpages = {15},
+ url = {http://dl.acm.org/citation.cfm?id=1763507.1763513},
+ acmid = {1763513},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg}
+} 
+
+@inproceedings{boogiePL,
+author = {DeLine, Rob and Leino, Rustan},
+title = {BoogiePL: A Typed Procedural Language for Checking Object-Oriented Programs},
+booktitle = {Technical Report MSR-TR-2005-70},
+year = {2005},
+institution = {Microsoft Research},
+month = {March},
+publisher = {Microsoft Research},
+url = {https://www.microsoft.com/en-us/research/publication/boogiepl-a-typed-procedural-language-for-checking-object-oriented-programs/},
+address = {},
+pages = {13},
+journal = {},
+volume = {},
+chapter = {},
+isbn = {}
+}
+
 @inproceedings{Vafeiadis:2010,
  author = {Vafeiadis, Viktor},
  title = {Automatically Proving Linearizability},
