A plan of implementation

--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -1,7 +1,42 @@
 \chapter{Реализация}
 \label{chapter_implementation}
 
-\section{Таблица обыкновенная} \label{sect3_1}
+\section{Введение} \label{sect_impl_introduction}
+
+При переходе от теории к практике становится важным уделять большее внимание эффективности применяемых алгоритмов.
+В этом разделе будут описаны оптимизации теоретически разработанных алгоритмов, которые позволяют применять их для реальных программных систем. 
+
+Первая такая оптимизация касается хранения достижимых состояний. В теории для определения состояния гонки необходимо было для каждой пары достигнутых состояний проверить наличие обращения к одинаковой разделяемой памяти. Такой простой алгоритм был совершенно не эффективен. Количество различных состояний может превышать десять миллионов. Поэтому необходимы очень эффективные алгоритмы хранения и поиска пары состояний образующих состояние гонки. В подразделе~\ref{sect_impl_storage} будут описаны соответствующие оптимизации.
+
+Процесс уточнения построенной абстракции может занимать достаточно много времени даже при решении задачи достижимости. При поиске состояний гонки может быть необходимо уточнить абстракцию сразу для нескольких обнаруженных состояний гонки. Уточнение абстракции последовательно становится очень неэффективным. В подразделе~\ref{sect_impl_refinement} описан процесс уточнения абстракции и применяемые оптимизации.
+
+Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации. Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки. Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualiztion} будут описан алгоритм печати трассы.
+
+\section{Оптимизации хранения данных} \label{sect_impl_storage}
+
+%BAM?
+
+Устройство хранения в процессе анализа. (контейнеры)
+
+Устройство глобального контейнера (usagePoint, дерево)
+
+Устройство уточненных состояний
+
+Пример 
+
+\section{Реализация уточнения} \label{sect_impl_refinement}
+
+Два варианта уточнения 
+
+Схема основного варианта
+
+Оптимизированный вариант?
+
+\section{Печать и визуализация} \label{sect_impl_visualiztion}
+
+Формат витнесов
+
+Структура графа пути
 
 Так размещается таблица:
 
