--- a/dissertation.tex
+++ b/dissertation.tex
@@ -33,6 +33,7 @@
 \include{Dissertation/part_related_work}   % Обзор
 \include{Dissertation/part_theory}         % Теория
 \include{Dissertation/part_implementation} % Реализация
+\include{Dissertation/part_evaluation} % Эксперименты
 \include{Dissertation/conclusion}          % Заключение
 \include{Dissertation/acronyms}            % Список сокращений и условных обозначений
 \include{Dissertation/dictionary}          % Словарь терминов
