Implementation part update

--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -12,13 +12,51 @@
 
 Важной задачей, на которую многие академические инструменты не обращают внимания, является понятное и наглядное представление результатов верификации. Это особенно важно для описания ошибок, связанных с параллельным выполнением нескольких потоков, так как при этом не достаточно указать только строку или переменную, в которой возможно наличие ошибки. Необходимо представить полную трассу выполнения потоков, выделив некоторые важные события, например, создание потоков, захват примитивов синхронизации и одновременные доступы к разделяемой памяти. В подразделе~\ref{sect_impl_visualiztion} будут описан алгоритм печати трассы.
 
+\section{Обзор инструмента} \label{sect_impl_storage}
+
+Описание анализов
+
+Картинка
+
+Пример работы 
+
 \section{Оптимизации хранения данных} \label{sect_impl_storage}
 
-%BAM?
+\subsection{Block Abstraction Memoization} \label{subsect_impl_bam}
 
-Устройство хранения в процессе анализа. (контейнеры)
+В процессе анализа используется оптимизация, использующая абстрактные блоки (англ. Block Abstraction Memoization, BAM). 
+Эта оптимизация позволяется переиспользовать результаты, полученные в процессе анализа.
+Например, если функция уже была проанализирована, и та же самая функция вызывается второй раз, анализировать ее заново не обязательно, если контекст ее вызова тот же самый.
+Абстрактными блоками, на границах которых производится кэширование результатов, могут быть как функции, так и тела циклов. 
 
-Устройство глобального контейнера (usagePoint, дерево)
+Каждый анализ описывает специальный механизм выделения существенной части из своего абстрактного состояния. Это операция reduce. 
+При входе анализом в новый абстрактный блок выполняется операция reduce. Полученное "уменьшенное" состояние ищется в кэше.
+В случае, если результат уже присутствует к кэше, то есть анализ для данного состояния уже проводился ранее, выполняется операция expand, которая на основе полного исходного состояния и неполного результирующего состояния строит полное результирующее состояние. 
+Если же фиксируется промах в кэше, это значит, что нужно провести анализ и сохранить его результат. 
+
+\subsection{Накопление результатов в процессе анализа} \label{subsect_impl_storage}
+
+Для каждого доступа к переменной формируется специальная структура данных, содержащая информацию об этом доступе. 
+Будем использовать обозначение $Usage$ для этой структуры данных.
+
+Основной задачей для сохранения результатов в процессе анализа является не обеспечение быстрого доступа и быстрого поиска, а удобство применения оптимизации BAM. 
+Для решения этой задачи была разработана многоуровневая система контейнеров. 
+Как только встречается доступ в разделяемую переменную, формируется $Usage$, который добавляется в небольшой контейнер, связанный с абстрактым состоянием. 
+В том состоянии, которое соответствует абстрактному состоянию предикатного анализа, все $Usage$ из временного контейнера переносятся в следующий контейнер, соответствующий абстрактному блоку. Это происходит только если соответствующее состояние предикатного анализа не является тождественным false. В случае, если в запуске не используется предикатный анализ, переносить $Usage$ в верхний контейнер можно в любой момент.
+
+При выходе из абстрактного блока выполняется операция expand для получившегося состояния, в том числе и для контейнера.
+Операция expand для контейнера заключается в применении операции expand для каждого элемента $Usage$.
+В основном это применение операции expand к информации в $Usage$, например, к множеству захваченных примитивов синхронизации. 
+После применения операции expand ко всему множеству $Usage$, полученное множество $Usage$ добавляется в контейнер внешнего абстрактного блока.
+Таким образом, информация о всех $Usage$ собирается снизу вверх по графу вызовов до самого main. 
+Одной из проблем являются бесконечные циклы. Если цикл не имеет выхода, это значит, что информация из контейнера, соответствующего этому абстрактному блоку, не будет добавлена в контейнер, соответствующий функции main.
+
+После завершения анализа, то есть при выходе из самого последнего (верхнего) абстрактного блока, информация из соответствующего контейнера добавляется в глобальный контейнер.
+
+\subsection{Устройство глобального контейнера} \label{subsect_impl_global_storage}
+
+Задачей глобального контейнера является обеспечение быстрого поиска состояний гонки среди всех добавленных состояний. 
+
 
 Устройство уточненных состояний
 
