--- a/Dissertation/part_implementation.tex
+++ b/Dissertation/part_implementation.tex
@@ -16,6 +16,17 @@
 
 Описание анализов
 
+LockCPA
+
+ThreadCPA
+
+PredicateCPA
+%Тоже сделать частью Usage?
+
+UsageCPA
+
+BAMCPA
+
 Картинка
 
 Пример работы 
@@ -56,15 +67,44 @@
 \subsection{Устройство глобального контейнера} \label{subsect_impl_global_storage}
 
 Задачей глобального контейнера является обеспечение быстрого поиска состояний гонки среди всех добавленных состояний. 
+На верхнем уровне контейнер содержит отображение из идентификатора переменной в специальное множество, содержащее $Point$. $Point$ - это срез информации, содержащейся в $Usage$, которая может повлиять на наличие состояние гонки.
+Например, информация о номере строки исходного кода является лишней для определения состояния гонки. 
+Для получения исходной информации имеется отображение из $Point$ во множество всех $Usage$, которые он представляет.
+При построении $Point$ необходимая информация извлекается из $Usage$.
+Каждый анализ сам определяет, является ли его информация необходимой для определения состояния гонки. 
+Так, в текущей конфигурации используется информация из состояний ThreadCPA и LockCPA. 
+При этом сохраняются не полные состояния анализа, а некоторые усеченные варианты, содержащие только необходимую информацию. 
+Опять же, какой вариант состояния требуется сохранить для вычисления состояния гонки, определяется сам анализ.
 
+Далее из множества $Point$ строится лес. При этом все элементы узлы одного дерева являются покрытыми корнем этого дерева. А все корни деревьев упорядочены таким образом, чтобы первыми элементами стояли те, которые с наибольшей вероятностью образуют состояние гонки.
 
-Устройство уточненных состояний
+\subsection{Устройство уточненных состояний} \label{subsect_impl_refined_usages}
 
-Пример 
+\subsection{Пример представления данных} \label{subsect_impl_example}
 
 \section{Реализация уточнения} \label{sect_impl_refinement}
 
-Два варианта уточнения 
+Уточнение абстракции по контрпримерам используется для того, чтобы исключить недостижимые пути из абстракции.
+В классическом варианте CEGAR используется при решении задачи достижимости.
+Когда найдено ошибочное состояние, начинается процесс уточнения: строится контрпример и проверяется, возможен ли такой сценарий в исходной программе. В случае, если такой путь является недостижимым из-за неточности абстракции, она уточняется таким образом, чтобы исключить такой путь из абстракции. 
+
+При поиске состояний гонки дело усложняется тем, что ошибкой является не одно состояние, а пара. При этом каждый из путей сам по себе не является ошибкой.
+Кроме того, обычно требуется обнаружить не первое состояние гонки в программе, а все потенциальные состояния гонки. 
+Таким образом, возможны две вариации процедуры уточнения абстракции.
+
+\begin{enumerate}
+\item Уточнение производится в процессе анализа. При обнаружении пары состояний, составляющих состояние гонки, оба пути проверяются на достижимость. Если найденная ошибка подтверждается, она отмечается, как подтвержденная и анализ продолжается.
+Этот вариант уточнения очень похож на классический вариант: при обнаружении ошибки абстракция уточняется до тех пор, пока ошибка либо не подтвердится, либо не опровергнется.
+Такой подход обладает существенным недостатком: для корректного завершения анализа, требуется построить очень точную абстракцию. 
+В случае, если анализируемый код содержит сотни тысяч строк кода, построение точной абстракции требует колоссального времени. 
+Более эффективно в этом случае гибко задавать ограничения на ресурсы, чтобы иметь возможность завершить анализ в любой момент, хотя это и повлечет за собой некоторое снижение точности. 
+Это позволяет сделать второй подход к уточнению.
+
+\item Уточнение всех путей производится в тот момент, когда абстракция полностью построена. Все обнаруженные состояния гонки проверяются на истинность, и, в случае необходимости, абстракция перестраивается. 
+Существенным недостатком этого подхода является большой объем лишней работы в том случае, если неточность абстракции затрагивает множество состояний гонки.
+Тогда проверка каждой из них будет давать один и тот же результат.
+Однако, возможно применение некоторых оптимизаций, которые позволяют сократить время на такую бесполезную работу. 
+\end{enumerate}
 
 Схема основного варианта
 
